app/_Components/Footer/Footer.css
#footer {
    background-color: black;
    height: 60rem;
    padding: 5.75rem;
}

.foot {
    height: 50rem;
}

.cont1 {
    height: 14rem;
    padding-left: 0.5rem;
}

.con1 h1 {
    font-family: "Druk Wide Trial", sans-serif;
    font-size: 8rem;
    font-weight: 800;
}

.cont2 {
    height: 33rem;
    padding: 1.685rem;
}

.con2 {
    height: 24.5rem;
    border-top: 2px solid #C6F806;
    border-bottom: 2px solid #C6F806;
    padding-top: 1.375rem;
    padding-bottom: 1.375rem;
    display: flex;
}

.f1 {
    height: 21rem;
    width: 50rem;
}

.sec1 {
    height: 11.31rem;
    width: 19.625rem;
    padding-top: 2.5rem;
    margin-bottom: 4rem;
}

.text1 {
    font-family: "Atyp Display", sans-serif;
    font-size: 1rem;
    margin-bottom: 1.5rem;
}

.img1 img {
    height: 6rem;
}

.link {
    border: 1px solid white;
    display: flex;
    gap: 1.5rem;
    font-size: 1.5rem;
    width: 13.8rem;
    padding: 0.9rem;
    padding-left: 1rem;
    text-align: center;
    line-height: 2rem;
}

.f2 {
    height: 21rem;
    width: 15rem;
    border-left: 1px solid #fff;
    border-right: 1px solid #fff;
    padding-left: 2.2rem;
    padding-bottom: 2rem;
}

.menu,
.contact {
    font-family: "Atyp Display", sans-serif;
    font-size: 1rem;
    margin: 0px auto;
    width: 11.5rem;
    height: 20rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1.75rem;
    align-items: left;
}

.contact {
    justify-content: left;
}

.f3 {
    width: 15rem;
    height: 21rem;
    padding-top: 0.1rem;
    padding-left: 2.5rem;
    font-family: "Atyp Display", sans-serif;
}

.cont3 {
    height: 3rem;
    display: flex;
    padding-left: 1.65rem;
    gap: 37rem;
    align-items: center;
}

.a {
    display: flex;
    justify-content: center;
    align-items: center;
}

.b {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 2.5rem;
    width: 10rem;
    color: black;
    background-color: #fff;
    font-size: 1.15rem;
}

.right {
    display: flex;
    gap: 2rem;
    height: 100%;
}

@media (max-width: 768px) {
    #footer {
        padding: 2rem;
        height: fit-content;
        margin-bottom: 2rem;
    }

    .foot {
        margin-bottom: 2rem;
    }

    .cont1 {
        padding-left: 0;
        padding-right: 22rem;
        text-align: center;
        height: 5rem;
    }

    .con1 h1 {
        font-size: 3.2rem;
    }

    .cont2 {
        padding: 0;
        height: 45rem;
    }

    .con2 {
        flex-direction: column;
        height: 40rem;
        border-top: 2px solid #C6F806;
        border-bottom: 2px solid #C6F806;
        padding: 1rem 0;
    }

    .f1,
    .f3 {
        width: 100%;
        padding: 1rem 0;
        border-bottom: 1px solid white;
    }

    .f3 {
        border-bottom: none;
    }

    .contact {
        padding-right: 42rem;
    }

    .f2 {
        display: none;
    }

    .cont3 {
        flex-direction: column;
        gap: 1rem;
        justify-content: center;
        align-items: center;
        margin-bottom: 1rem;
    }

    .right {
        gap: 1rem;
        flex-direction: column;
    }

    .b {
        margin-left: 1.2rem;
    }

    .img1 img {
        height: 4rem;
        width: 80%;
    }

    .sec1 {
        margin-bottom: 0px;
        height: 10rem;
        padding-top: 0px;
    }

    .left {
        text-align: center;
        font-size: 14px;
        font-weight: 600;
    }
}

